--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
+    "react-spinners": "^0.15.0",
     "remark-gfm": "^4.0.0",
     "three": "^0.174.0"
   },
