--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.5.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
@@ -29,5 +30,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
